Removed horizontal scrolling in desktop view of recitation page and fixed alignment of reciter name in mobile view. (#91)

--- a/src/components/Audioplayer/mobile.scss
+++ b/src/components/Audioplayer/mobile.scss
@@ -45,7 +45,6 @@ $brand-color: $brand-primary;
         position: relative;
         margin-bottom: 0;
         z-index: 1;
-        left: 15px;
         top: -4px;
     }
 
